SPOI-11145 GC documentation for 3.8